--- a/ios/AppSDK/Info.plist
+++ b/ios/AppSDK/Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Pick foto from camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Pick foto from library</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
