--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"class-autobind": "^0.1.4",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-actionsheet": "^2.3.0",
 		"react-native-file-uploader": "0.0.2",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-vector-icons": "^4.4.2"
